[package]
name = "mediautil"
version = "0.1.2"
edition = "2024"
description = "Local-first CLI for image/PDF utilities, OCR, QR codes, icons, data URIs, and base64 workflows."
license = "MIT"
repository = "https://github.com/harivilasp/mediautil"
homepage = "https://github.com/harivilasp/mediautil"
readme = "README.md"
keywords = ["cli", "media", "pdf", "ocr", "qr"]
categories = ["command-line-utilities", "multimedia::images", "encoding"]

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["derive"] }
image = { version = "0.25.6", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "pnm", "tiff", "webp"] }
mime_guess = "2.0.5"
qrcode = { version = "0.14.1", default-features = false, features = ["image"] }
rqrr = "0.10.1"
thiserror = "2.0.12"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"
